--- a/index.html
+++ b/index.html
@@ -175,7 +175,7 @@
             target="_blank" class="nav-link">Haltern am See</a>
         </li>
         <li class="nav-item">
-          <a style="padding:20px" href="C:\Users\W10 User\Documents\WebSites\Holiday Flat\indexGerman.HTML"
+          <a style="padding:20px" href="https://shaunhaldane.github.io/Ferienwohnung-Philippiestr/"
             class="nav-link">Language: English</a>
         </li>
       </ul>
